--- a/package.json
+++ b/package.json
@@ -247,7 +247,7 @@
     "publisher": "inzamrzn918",
     "repository": {
         "type": "git",
-        "url": "https://github.com/inzamrzn918/env-manager.git"
+        "url": "https://github.com/inzamrzn918/env_manager"
     },
     "type": "commonjs"
 }
